--- a/crisp/assets/styles/crisp.css
+++ b/crisp/assets/styles/crisp.css
@@ -175,12 +175,23 @@ h1.post-title {
 	margin-top:0.35em;
 	margin-bottom: 0.6em;
 }
-h3.post-title {
+.post-title {
 	margin-top:0.4em;
-	padding-bottom:0.9em;
+	margin-bottom:1em;
+	padding-bottom:0.2em;
 	border-bottom: 1px solid #eee;
 	font-size: 1.2em;
 	color: #444;
+}
+.post-title .date {
+	font-size: 0.8em;
+}
+.post-title .title {
+	font-size: 1.5em;
+	margin: 0;
+}
+.post-title > p {
+	font-size: 0.8em;
 }
 .post-title .feature-star {
 	font-size: 0.9em;
