--- a/crisp/partials/postlist.hbs
+++ b/crisp/partials/postlist.hbs
@@ -1,5 +1,28 @@
 {{#foreach posts}}
 <section id="{{id}}" class="{{post_class}}">
-	<h3 class="post-title"><a href="{{url}}">{{title}}</a><span class="separator"> &middot; </span>{{date published_at format='MMMM D, YYYY'}}<span class="taglist">{{tags separator=" " prefix=" &middot; "}}</span>{{#if featured}}<span class="separator"> &middot; </span><i class="fa fa-star-o feature-star"></i>{{/if}}</h3>
+
+  <div class="post-title">
+	<div class="date">
+	  {{date published_at format='MMMM D, YYYY'}}
+	</div>
+
+	<a href="{{url}}">
+	  <h3 class="title">
+		{{title}}
+		{{#if featured}}
+		<i class="fa fa-star-o feature-star"></i>
+		{{/if}}
+	  </h3>
+	</a>
+
+	<div class="taglist">
+	  {{tags separator=" " prefix=""}}
+	</div>
+
+	<p>
+	  {{excerpt}}...
+	</p>
+
+  </div>
 </section>
 {{/foreach}}
