--- a/crisp/post.hbs
+++ b/crisp/post.hbs
@@ -1,11 +1,32 @@
 {{!< default}}
 {{#post}}
+
 <article id="{{id}}" class="{{post_class}}">
-	<div class="post-stamp">{{date published_at format='MMMM D, YYYY'}}<span class="taglist">{{tags separator=" " prefix=" &middot; "}}</span>{{#if featured}}<span class="separator"> &middot; </span><i class="fa fa-star-o feature-star"></i>{{/if}}</div>
-	<h1 class="post-title">{{title}}</h1>
-	{{content}}
-	{{> share}} 
+
+  <div class="post-title" style="border: none">
+	<div class="date">
+	  {{date published_at format='MMMM D, YYYY'}}
+	</div>
+
+	<h3 class="title">
+	  {{title}}
+	  {{#if featured}}
+	  <i class="fa fa-star-o feature-star"></i>
+	  {{/if}}
+	</h3>
+
+	<div class="taglist">
+	  {{tags separator=" " prefix=""}}
+	</div>
+  </div>
+
+  {{content}}
+
+  {{> share}} 
+
 </article>
+
+
 <!-- Begin Comments Code -->
 <div id="comments">
 	<div id="disqus_thread"></div>
