--- a/crisp/assets/styles/crisp.css
+++ b/crisp/assets/styles/crisp.css
@@ -83,7 +83,7 @@ img, iframe {
 a {
 	font-weight:700;
 	text-decoration:none;
-	color: #5cc265; /* Change Link Color */
+	color: #f4a00c; /* Change Link Color */
 }
 a:hover {
 	text-decoration:underline;
