--- a/crisp/default.hbs
+++ b/crisp/default.hbs
@@ -37,7 +37,10 @@
 			{{{body}}}
 		</main>
 		<footer id="footer">
-			<section id="footer-message">&copy; {{date format='YYYY'}} {{@blog.title}}. All rights reserved. Powered by <a href="http://ghost.org" target="_blank">Ghost</a>. <a href="https://github.com/kathyqian/crisp-ghost-theme" target="_blank">Crisp</a> theme by <a href="http://kathyqian.com" target="_blank">Kathy Qian</a>.</section>
+			<section id="footer-message">
+			  Sergio García Mondaray<br/>
+			  Todo el contenido de este blog se distribuye bajo licencia <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons BY 4.0</a>.
+			</section>
 		</footer>
 	{{ghost_foot}}
 	</body>
