--- a/crisp/partials/postlist.hbs
+++ b/crisp/partials/postlist.hbs
@@ -3,7 +3,7 @@
 
   <div class="post-title">
 	<div class="date">
-	  {{date published_at format='MMMM D, YYYY'}}
+	  {{date published_at format='DD-MM-YYYY'}}
 	</div>
 
 	<a href="{{url}}">
@@ -20,7 +20,7 @@
 	</div>
 
 	<p>
-	  {{excerpt}}...
+	  {{excerpt}}... <br/><a href="{{url}}" style="font-size: 1em; font-weight: normal" class="">Seguir leyendo</a>
 	</p>
 
   </div>
