--- a/crisp/partials/follow.hbs
+++ b/crisp/partials/follow.hbs
@@ -1,18 +1,21 @@
 <div id="follow-icons">
-	<a href="http://facebook.com/username"><i class="fa fa-facebook-square fa-2x"></i></a>
-	<a href="http://twitter.com/username"><i class="fa fa-twitter-square fa-2x"></i></a>
-	<a href="http://linkedin.com/in/username"><i class="fa fa-linkedin-square fa-2x"></i></a>
-	<a href="mailto:you@example.com"><i class="fa fa-envelope-square fa-2x"></i></a>
-	<a href="{{@blog.url}}/rss"><i class="fa fa-rss-square fa-2x"></i></a> 
+  <a href="{{@blog.url}}/rss"><i class="fa fa-rss-square fa-2x"></i></a>
+  <a href="http://github.com/sgmonda"><i class="fa fa-github-square fa-2x"></i></a>
+  <a href="https://plus.google.com/117002064669755056433"><i class="fa fa-google-plus-square fa-2x"></i></a>
+  <a href="http://flickr.com/sgmonda"><i class="fa fa-flickr fa-2x"></i></a>
+  <a href="http://twitter.com/sgmonda"><i class="fa fa-twitter-square fa-2x"></i></a>
+  <a href="http://es.linkedin.com/pub/sergio-garcia-mondaray/26/44a/915"><i class="fa fa-linkedin-square fa-2x"></i></a>
+  <a href="mailto:sgmonda@gmail.com"><i class="fa fa-envelope-square fa-2x"></i></a>
+
 </div>                                                                  
 
 <!--
-<a href="http://github.com/username"><i class="fa fa-github-square fa-2x"></i></a>
-<a href="http://plus.google.com/+username"><i class="fa fa-google-plus-square fa-2x"></i></a>
+
+
 <a href="http://instagram.com/username"><i class="fa fa-instagram fa-2x"></i></a>
 <a href="http://vimeo.com/username"><i class="fa fa-vimeo-square fa-2x"></i></a>
-<a href="http://youtube.com/username"><i class="fa fa-youtube-square fa-2x"></i></a>
-<a href="http://flickr.com/username"><i class="fa fa-flickr fa-2x"></i></a>
+
+
 <a href="http://pinterest.com/username"><i class="fa fa-pinterest-square fa-2x"></i></a>
 <a href="http://username.tumblr.com"><i class="fa fa-tumblr-square fa-2x"></i></a>
 -->
