--- a/crisp/partials/navigation.hbs
+++ b/crisp/partials/navigation.hbs
@@ -1,1 +1,8 @@
-<h6><a href="{{@blog.url}}/about">About</a></h6>
+<h6>
+  <div><a href="{{@blog.url}}/"><span class="fa fa-home" style=""></span> Inicio</a></div>
+  <div><a href="{{@blog.url}}/tag/fotografia"><span class="fa fa-camera-retro" style=""></span> Fotografía</a></div>
+  <div><a href="{{@blog.url}}/tag/desarrollo-de-software"><span class="fa fa-code" style=""></span> Desarrollo de software</a></div>
+</h6>
+<h6>
+  <a href="http://sgmonda.com">Sobre mí</a>
+</h6>
